Feat: grams done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unit Converter</title>
 </head>
 <body>
+    <!-- Kg to grams section -->
+     <div class="gramsContainer">
+        <p class="grams"></p>
+        <button class="gramsButton">Convert to grams</button>
+     </div>
     
 
 
