Change: Refactor codes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 <body>
     <!-- Kg to grams section -->
-     <div class="gramsContainer">
-        <p class="grams"></p>
-        <button class="gramsButton">Convert to grams</button>
-     </div>
+     <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
+        <div class="card-header">Kg to grams</div>
+        <div class="card-body">
+          <h5 class="card-title">Results:</h5>
+          <p class="card-text grams"></p>
+        </div>
+        <button type="button" class="btn btn-outline-primary gramsButton">Primary</button>
+      </div>
     
 
 
