Feat: Km to meters added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
           <h5 class="card-title">Results:</h5>
           <p class="card-text grams"></p>
         </div>
-        <button type="button" class="btn btn-outline-primary gramsButton">Primary</button>
+        <button type="button" class="btn btn-outline-primary gramsButton">Click</button>
+      </div>
+
+      <!-- Km to meters section -->
+      <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+        <div class="card-header">Km to meters</div>
+        <div class="card-body">
+          <h5 class="card-title">Results:</h5>
+          <p class="card-text meters"></p>
+        </div>
+        <button type="button" class="btn btn-outline-dark metersButton">Click</button>
       </div>
     
 
