Feat: GB to MB added

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         </div>
         <button type="button" class="btn btn-outline-dark metersButton">Click</button>
       </div>
+      <!-- GB to MB -->
+      <div class="card text-white bg-warning mb-3" style="max-width: 18rem;">
+        <div class="card-header">GB to MB</div>
+        <div class="card-body">
+          <h5 class="card-title">Results:</h5>
+          <p class="card-text MB"></p>
+        </div>
+          <button type="button" class="btn btn-outline-danger MBButton">Danger</button>
+        </div>
     
 
 
