Feat: Miles to KM added

--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
           <h5 class="card-title">Results:</h5>
           <p class="card-text MB"></p>
         </div>
-          <button type="button" class="btn btn-outline-danger MBButton">Danger</button>
+          <button type="button" class="btn btn-outline-danger MBButton">Click</button>
         </div>
+        <!-- Miles to Km -->
+        <div class="card bg-light mb-3" style="max-width: 18rem;">
+            <div class="card-header">Miles to Km</div>
+            <div class="card-body">
+              <h5 class="card-title">Results:</h5>
+              <p class="card-text Km"></p>
+            </div>
+            <button type="button" class="btn btn-outline-secondary KmButton">Click</button>
+          </div>
     
 
 
